# gonka-tracker

./: LICENSE  README.md  config.env.template  docker-compose.yaml
backend/: pyproject.toml
backend/scripts/: test_validator_info.py
backend/src/backend/: app.py  client.py  database.py  models.py  router.py  service.py
backend/test_data/: authz_grants_09ake364.json  epoch_performance_summary_51_gonka14cu38x.json  epoch_performance_summary_52_gonka14cu38x.json  epoch_performance_summary_53_gonka14cu38x.json  epoch_performance_summary_54_gonka14cu38x.json  epoch_performance_summary_55_gonka14cu38x.json  epoch_performance_summary_56_gonka14cu38x.json  hardware_nodes_gonka10ypwjuh.json  hardware_nodes_gonka1sqwpuxk.json  settle_amounts_all.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: EpochTimer.tsx  InferenceDetailModal.tsx  ModelModal.tsx  Models.tsx  ParticipantModal.tsx  ParticipantTable.tsx  Timeline.tsx
frontend/src/hooks/: useEstimatedBlock.ts  usePrefetch.ts
frontend/src/types/: inference.ts
planning/: fix-total-rewards-auto-heal.md  task-13.md  task-14.md  task-15.md  task-16.md  task-17.md  task-18.md  task-19.md
