[project]
name = "tracker"
version = "0.1.0"
description = "Minimal FastAPI backend"
authors = [
    {name = "Gleb Morgachev", email = "morgachev.g@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Repository = "https://github.com/gonka-ai/gonka-tracker"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

